# spherics

./: .gitignore  LICENSE  README.md  pyproject.toml
src/spherics/: __init__.py  distributions.py  spherical_utils.py
tests/: test_distributions.py  test_spherical_utils.py
